Version 1.0.7 (Januari xxth 2013)
- replaced all localtime function with localtime_r

Version 1.0.6 (Januari 9th 2013)
- {SunRise/Set is now calculated on startup and 01:00am}
- RFXCOM Lan will now keep retrying to connect when it does not succeed on the first time
- P1 Smart Meter Serial hardware implemented
- P1 Smart Meter TCP hardware implemented
- Fixed: Temp, Hum, TempHumBaro ID
- option to add a manual LightwaveRF switch
- Chime light/switch status will now also trigger a notification
- Web Protection, option to ignore (local) networks
- Code should now compile also with VS2010 express
- Code now compiles also with Debian (Mac OS)
- Lighting 1, ARC Doorbell is now send with a 'Chime' instead of AllOn
- P1 Smart Meter, Gas value now only send/update when the value is changing (once every 1 a 2 hours)
- P1 Smart Meter updates to shared clients now once every 60 seconds (reduces network traffic)
- Random Timer implemented (OnTime timer with +/- xxx minutes offset)

Version 1.0.5 (December 29th 2012)
- Start of History document